fix ion-icon visibility issue

--- a/apps/smokex_web/assets/css/_helpers.scss
+++ b/apps/smokex_web/assets/css/_helpers.scss
@@ -1,5 +1,6 @@
 // icons!
 ion-icon {
+  visibility: inherit !important;
   &.is-success {
     color: $success
   }
